--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   font_awesome_flutter: ^10.7.0
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
   flutter:
     sdk: flutter
 
@@ -38,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
 
