--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   font_awesome_flutter: ^10.7.0
   hive_flutter: ^1.1.0
+  modal_progress_hud_nsn: ^0.5.1
   hive: ^2.2.3
   flutter_bloc: ^8.1.6
   flutter:
