--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   hive: ^2.2.3
   flutter_bloc: ^8.1.6
+  intl: ^0.19.0
   flutter:
     sdk: flutter
 
