--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   hive: ^2.2.3
   flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
   intl: ^0.19.0
+  meta: ^1.15.0
   flutter:
     sdk: flutter
 
@@ -43,6 +45,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  flutter_lints: ^4.0.0
   build_runner: ^2.4.13
   hive_generator: ^2.0.1
   flutter_test:
@@ -53,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
